# codestral_mamba

./: .gitignore  README.md  chatbot.py  download.py  generation.py  pyproject.toml  server.py
